Changelog
=========

1.6 (unreleased)
----------------

- Changed control panel form in order to make it more user friendly [gborelli]
- Fixed translation domain in the collectivegeo_macros [rnd0101]
- Allowed OSM and overlay URL helper functions to take into account
  zoomOffset.
  [davidjb]
- Ensuring that the maxExtent for spherical mercator covers all coordinates.
  [davidjb]
- Added German translation [Denis Krienbühl]

1.5 (2012-02-11)
----------------

- Added French translation [Fabien Moret]
- Added ability to hit enter key within geocoder input and search. Previously,
  hitting enter submitted the parent form.
  [davidjb]
- Fix minor typo on geocoder error div
  [davidjb]
- Replace deprecated usage of ``jq`` with ``$`` (using ``jQuery`` function)
  [davidjb]
- Allow mapwidget to utilise HTTPS mapping resources, where possible, to
  attempt to avoid issues of loading insecure resources like map tiles. Only
  Google and Bing support HTTPS for their APIs at present - Yahoo and OSM do
  not. To avoid security errors, avoid the use of the latter two map APIs
  when on HTTPS.
  [davidjb]
- Provide request protocol to layer templates
  [davidjb]
- Make tests install the collective.geo.settings extension profile so
  plone.app.registry knows about settings.
  [davidjb]
- Added Danish translation [stonor]


0.1.4 (2011-09-05)
------------------
- Changed javascript to bind window load event to create map. It fixes #29 [gborelli]
- Added fix to reload OL map layers when the map is made visible after
  being loaded within a non-default Plone fieldset [davidjb]
- added improvements about the Internationalization [macagua]
- added support for Spanish localization for collective.geo.mapwidget domain [macagua]
- Make our mapwidget automatically zoom to see a loaded WKT feature. [davidjb]
- Show our default fieldset first on our form in accordance with changes in
  plone.app.z3cform 0.5.0+. [davidjb]